<resources>
    <string name="app_name">fc1-SubBook</string>
    <string name="Add">Add</string>
    <string name="EnterName">Enter name</string>
    <string name="enterDate">Date started: yyyy-mm-dd</string>
    <string name="enterBill">Monthly charge in CAD</string>
    <string name="enterComment">Enter comment</string>
    <string name="OK">OK</string>
    <string name="SubscriptionList">Subscription List</string>
    <string name="Clear">CLEAR</string>
    <string name="title_activity_view_and_edit">ViewAndEditActivity</string>
    <string name="Edit">EDIT</string>
    <string name="HowToDelete">Hold on to the item to delete</string>
    <string name="done">DONE</string>
    <string name="back">BACK</string>
    <string name="totalCharge">Total charge:</string>
</resources>
